uf-11450: Change type on company location.
