# src/integration-test/resources/openapi.yml
@@ -1,13 +1,13 @@
 openapi: 3.0.1
 info:
   title: api-businessengagements
-  contact: { }
+  contact: {}
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "2.0"
+  version: "3.0"
 servers:
-  - url: http://localhost:53507
+  - url: http://127.0.0.1:8080
     description: Generated server url
 tags:
   - name: Business Engagements
@@ -17,6 +17,8 @@ paths:
     get:
       tags:
         - Business Engagements
+      summary: Get business information
+      description: Get information about a company
       operationId: getBusinessInformation
       parameters:
         - name: municipalityId
@@ -43,14 +45,14 @@ paths:
             type: string
             description: Name of the organization
       responses:
-        "400":
-          description: Bad Request
+        "200":
+          description: Successful Operation
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Problem"
-        "404":
-          description: Not Found
+                $ref: "#/components/schemas/BusinessInformation"
+        "400":
+          description: Bad Request
           content:
             '*/*':
               schema:
@@ -67,16 +69,20 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Problem"
-        "200":
-          description: Successful Operation
+        "404":
+          description: Not Found
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/BusinessInformation"
+                oneOf:
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
   /{municipalityId}/engagements/{partyId}:
     get:
       tags:
         - Business Engagements
+      summary: Get business engagements
+      description: Get a list of business engagements for a person
       operationId: getEngagements
       parameters:
         - name: municipalityId
@@ -112,14 +118,14 @@ paths:
             example: Mina Sidor
           example: Mina Sidor
       responses:
-        "400":
-          description: Bad Request
+        "200":
+          description: Successful Operation
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Problem"
-        "404":
-          description: Not Found
+                $ref: "#/components/schemas/BusinessEngagementsResponse"
+        "400":
+          description: Bad Request
           content:
             '*/*':
               schema:
@@ -130,18 +136,20 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BusinessEngagementsResponse"
-        "200":
-          description: Successful Operation
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BusinessEngagementsResponse"
         "500":
           description: Internal Server Error
           content:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Problem"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                oneOf:
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
   /api-docs:
     get:
       tags:
@@ -173,19 +181,186 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
+    ConstraintViolationProblem:
+      type: object
+      properties:
+        cause:
+          $ref: "#/components/schemas/ThrowableProblem"
+        stackTrace:
+          type: array
+          items:
+            type: object
+            properties:
+              classLoaderName:
+                type: string
+              moduleName:
+                type: string
+              moduleVersion:
+                type: string
+              methodName:
+                type: string
+              fileName:
+                type: string
+              lineNumber:
+                type: integer
+                format: int32
+              className:
+                type: string
+              nativeMethod:
+                type: boolean
+        type:
+          type: string
+          format: uri
+        status:
+          $ref: "#/components/schemas/StatusType"
+        violations:
+          type: array
+          items:
+            $ref: "#/components/schemas/Violation"
+        title:
+          type: string
+        message:
+          type: string
+        instance:
+          type: string
+          format: uri
+        parameters:
+          type: object
+          additionalProperties:
+            type: object
+        detail:
+          type: string
+        suppressed:
+          type: array
+          items:
+            type: object
+            properties:
+              stackTrace:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    classLoaderName:
+                      type: string
+                    moduleName:
+                      type: string
+                    moduleVersion:
+                      type: string
+                    methodName:
+                      type: string
+                    fileName:
+                      type: string
+                    lineNumber:
+                      type: integer
+                      format: int32
+                    className:
+                      type: string
+                    nativeMethod:
+                      type: boolean
+              message:
+                type: string
+              localizedMessage:
+                type: string
+        localizedMessage:
+          type: string
+    ThrowableProblem:
+      type: object
+      properties:
+        cause:
+          $ref: "#/components/schemas/ThrowableProblem"
+        stackTrace:
+          type: array
+          items:
+            type: object
+            properties:
+              classLoaderName:
+                type: string
+              moduleName:
+                type: string
+              moduleVersion:
+                type: string
+              methodName:
+                type: string
+              fileName:
+                type: string
+              lineNumber:
+                type: integer
+                format: int32
+              className:
+                type: string
+              nativeMethod:
+                type: boolean
+        message:
+          type: string
+        instance:
+          type: string
+          format: uri
+        type:
+          type: string
+          format: uri
+        parameters:
+          type: object
+          additionalProperties:
+            type: object
+        title:
+          type: string
+        detail:
+          type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
+        suppressed:
+          type: array
+          items:
+            type: object
+            properties:
+              stackTrace:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    classLoaderName:
+                      type: string
+                    moduleName:
+                      type: string
+                    moduleVersion:
+                      type: string
+                    methodName:
+                      type: string
+                    fileName:
+                      type: string
+                    lineNumber:
+                      type: integer
+                      format: int32
+                    className:
+                      type: string
+                    nativeMethod:
+                      type: boolean
+              message:
+                type: string
+              localizedMessage:
+                type: string
+        localizedMessage:
+          type: string
+    Violation:
+      type: object
+      properties:
+        field:
+          type: string
+        message:
           type: string
     Address:
       type: object
@@ -466,4 +641,4 @@ components:
           description: Unique id for the organization (UUID)
           example: bab17d8b-af38-4531-967c-083f15ca1571
       description: Represents a persons business engagement.
-  securitySchemes: { }
+  securitySchemes: {}
